--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
-<body></body>
+<body>
+   
+</body>
 </html>  
  
