--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="width: 30%; padding: 4rem">
+        <div class="card card--secondary">
+            <header
+                class="card__header">Card Title</header>
+            <div class="card__body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia repellendus quo distinctio.
+            </div>
+        </div>
+    </div>
 </body>
 </html>  
  
