--- a/index.html
+++ b/index.html
@@ -12,7 +12,359 @@
     <title>Document</title>
 </head>
 <body>
-   
+    <header>
+        <nav class="nav collapsible">
+            <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
+            <svg class="icon icon--white nav__toggler">
+                <use xlink:href="images/sprite.svg#menu"></use>
+            </svg>
+            <ul class="list nav__list collapsible__content">
+                <li class="nav__item"><a href="#">Hosting</a></li>
+                <li class="nav__item"><a href="#">VPS</a></li>
+                <li class="nav__item"><a href="#">Domain</a></li>
+                <li class="nav__item"><a href="#">Pricing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+        <div class="container grid grid--1x2">
+            <header class="block__header hero__content ">
+                <h1 class="block__heading">Cloud Hosting for Pros</h1>
+                <p class="hero__tagline">Deploy your websites in less than 60 seconds.</p>
+                <a href="#" class="btn btn--accent btn--stretched">Get Started</a>
+            </header>
+            <picture>
+                <source type="image/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x">
+                <source type="image/png" srcset="images/banner.png 1x, images/banner@2x.png 2x">
+                <img class="hero__image" src="images/banner.png" alt="">
+            </picture>
+        </div>
+    </section>
+    <section class="block container block-domain">
+        <header class="block__header">
+            <h2>Starting at $9 per month</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, excepturi?
+            </p>
+        </header>
+        <div class="input-group">
+            <input 
+                type="text" 
+                class="input" 
+                placeholder="Enter domain name here...">
+            <button class="btn btn--accent">
+                <svg class="icon icon--white">
+                    <use xlink:href="images/sprite.svg#search"></use>
+                 </svg>
+                 Search
+            </button>
+        </div>
+        <ul class="list block-domain__prices">
+            <li>.com $9</li>
+            <li>.sg $10</li>
+            <li>.space $11</li>
+            <li>.info $10</li>
+            <li>.net $10</li>
+            <li>.xyz $10</li>
+        </ul>
+    </section>
+    <section class="block container block-plans">
+        <div class="grid grid--1x3">
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--secondary badge--small">10% OFF</span>
+                        <span class="plan__description">East start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan plan--popular">
+                <div class="card card--primary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--primary badge--small">10% OFF</span>
+                        <span class="plan__description">East start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                        <h3 class="plan__name">Entry</h3>
+                        <span class="plan__price">$14</span>
+                        <span class="plan__billing-cycle">/month</span>
+                        <span class="badge badge--secondary badge--small">10% OFF</span>
+                        <span class="plan__description">East start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB RAM</li>
+                        </ul>
+                        <button class="btn btn--outline btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="block container">
+        <header class="block__header">
+            <h2>Host on the cloud to Keep Growing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, quis.</p>
+        </header>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#easy"></use>
+                     </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati atque quaerat totam quae voluptatibus itaque mollitia quas molestiae laudantium quo. Placeat nemo nostrum eveniet maxime quis quisquam iste minus. Facere.
+                </p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="images/Easy.webp 1x, images/Easy@2x.webp 2x">
+                <source type="image/jpg" srcset="images/Easy.jpg 1x, images/Easy@2x.jpg 2x">
+                <img class="feature__image" src="images/easy.jpg" alt="">
+            </picture>    
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#computer"></use>
+                     </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati atque quaerat totam quae voluptatibus itaque mollitia quas molestiae laudantium quo. Placeat nemo nostrum eveniet maxime quis quisquam iste minus. Facere.
+                </p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x">
+                <source type="image/jpg" srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x">
+                <img class="feature__image" src="images/wordpress.jpg" alt="">
+            </picture>    
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#settings"></use>
+                     </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati atque quaerat totam quae voluptatibus itaque mollitia quas molestiae laudantium quo. Placeat nemo nostrum eveniet maxime quis quisquam iste minus. Facere.
+                </p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="images/fast.webp 1x, images/fast@2x.webp 2x">
+                <source type="image/jpg" srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x">
+                <img class="feature__image" src="images/fast.jpg" alt="">
+            </picture>    
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#clock"></use>
+                     </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati atque quaerat totam quae voluptatibus itaque mollitia quas molestiae laudantium quo. Placeat nemo nostrum eveniet maxime quis quisquam iste minus. Facere.
+                </p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture>
+                <source type="image/webp" srcset="images/support.webp 1x, images/support@2x.webp 2x">
+                <source type="image/jpg" srcset="images/support.jpg 1x, images/support@2x.jpg 2x">
+                <img class="feature__image" src="images/support.jpg" alt="">
+            </picture>    
+        </article>
+    </section>
+    <section class="block block--dark block--skewed-right block-showcase">  
+        <header class="block__header">
+            <h2>User-friendly Control Panel</h2>
+        </header>
+        <div class="container grid grid--1x2">
+            <picture class="block-showcase__image">
+                <source type="image/webp" srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x">
+                <source type="image/png" srcset="images/ipad.png 1x, images/ipad@2x.png 2x">
+                <img src="images/ipad.png" alt="An ipad">
+            </picture>
+            <ul class="list">
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Easy Start & Managed Updates</h3>
+                            <p>Our cloud plans include easy onboarding for new and existing sites and managed WordPress and WooCommerce auto-updates. </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#growth"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Staging, Git & WP-CLI</h3>
+                            <p>We make your WordPress and WooCommerce development flow easier with a convenient staging tool and Git and WP-CLI integration.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#wordpress"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Dynamic Caching & More</h3>
+                            <p>Speed up your WordPress and Woo sites with our SG 
+                            Optimizer plugin through smart dynamic caching and multiple other performance optimizations.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="block">
+        <header class="block__header">
+            <h2>What our Customers are Saying</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, amet!</p>
+        </header>
+        <div class="container">
+            <div class="card testimonial">
+                <div class="grid grid--1x2">
+                    <div class="testimonial__image">
+                        <img src="/images/testimonial.jpg" alt="A happy, smiling customer.">
+                        <span class="icon-container icon-container--accent">
+                            <svg class="icon icon--white icon-small">
+                                <use xlink:href="images/sprite.svg#quotes"></use>
+                               </svg>
+                        </span>
+                    </div>
+                    <blockquote class="quote">
+                        <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus accusamus autem aspernatur dolores ducimus id exercitationem labore quos iusto voluptatum.</p>
+                        <footer>
+                            <div class="media">
+                                <div class="media__image">
+                                    <svg class="icon icon--primary quote__line">
+                                        <use xlink:href="images/sprite.svg#line"></use>
+                                    </svg >
+                                </div>
+                                <div class="media__body">
+                                    <h3 class="media__title quote__author">John Smith</h3>
+                                    <p class="quote__organization">ABC Company</p>
+                                </div>
+                            </div>
+                        </footer>
+                       </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div class="callout callout--primary callout-signup">
+          <div class="grid grid--1x2">
+            <div class="callout__content">
+              <h2 class="callout__heading">Ready to Get Started?</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+                voluptate tempora qui distinctio consequatur aliquid pariatur
+                cupiditate quas cum fugit.
+              </p>
+            </div>
+            <a
+              target="_blank"
+              href="https://codewithmosh.com"
+              class="btn btn--secondary btn--stretched"
+              >Get Started</a
+            >
+          </div>
+        </div>
+      </div>
+    <footer class="block block--dark footer">
+        <div class="container grid footer__sections">
+            <section class="collapsible collapsible--expanded footer__section">
+                <header class="collapsible__header">
+                  <h2 class="collapsible__heading footer__heading">Item 1</h2>
+                  <svg class="icon icon--white collapsible__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Website Hosting</a>
+                        <li><a href="#">Free Automated Wordpress</a>
+                        <li><a href="#">Migrations </a>
+                    </ul>
+                </div>
+              </section>
+              <section class="collapsible footer__section">
+                <header class="collapsible__header">
+                  <h2 class="collapsible__heading footer__heading">Item 1</h2>
+                  <svg class="icon icon--white collapsible__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, accusamus.
+                </div>
+              </section>
+              <section class="collapsible footer__section">
+                <header class="collapsible__header">
+                  <h2 class="collapsible__heading footer__heading">Item 1</h2>
+                  <svg class="icon icon--white collapsible__chevron">
+                    <use xlink:href="images/sprite.svg#chevron"></use>
+                  </svg>
+                </header>
+                <div class="collapsible__content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, accusamus.
+                </div>
+              </section>
+              <section class="footer__brand">
+                <img src="images/logo.svg" alt="">
+                <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
+              </section>
+        </div>
+    </footer>    
     <script src="js/main.js"></script>
 </body>
 </html>  
