--- a/index.html
+++ b/index.html
@@ -198,11 +198,10 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture data-aos="zoom-in-right>
-          <source
+        <picture data-aos="zoom-in-right">
+          <source 
             type="image/webp"
-            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
-          />
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"/>
           <source
             type="image/jpg"
             srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
@@ -224,7 +223,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture data-aos="zoom-in-left>
+        <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
             srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
@@ -250,7 +249,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture data-aos="zoom-in-right>
+        <picture data-aos="zoom-in-right">
           <source
             type="image/webp"
             srcset="images/support.webp 1x, images/support@2x.webp 2x"
@@ -398,12 +397,12 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -413,12 +412,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -428,12 +427,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -443,12 +442,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -457,10 +456,10 @@
             </ul>
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
-        </section>
+        </div>
       </div>
     </footer>
     <script src="js/main.js"></script>
